# gitehr

./: .coveragerc  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  Cargo.toml.old  Dockerfile  Dockerfile.mkdocs  Dockerfile.tauri  MCP-IMPLEMENTATION-SUMMARY.md  README.md  RecordTypes.py  RecordWriter.py  STORE-ROOT-IMPLEMENTATION.md  STORE-ROOT-TEST-RESULTS.md  cliff.toml  docker-compose.yml  index.html  main.py  mkdocs.yml  pytest.ini  release-plz.toml  requirements.txt  roadmap.md  sitemap.xml  spec.md  test-mcp.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  deploy-docs-to-ghpages.yml  deploy-mkdocs-to-ghpages.yml  publish-crates.yml  release-plz.yml  release.yml
Utils/: Record.py  RecordTypes.py  RecordWriter.py  YAMLFrontmatter.py  __init__.py  blockchain.py  pgp.py  record_types.py  record_writer.py  records.py  yaml.py
Utils/constants/: meta_files.py
Utils/helper_functions/: __init__.py  get_current_datetime.py  get_iso_filename.py
about/contributors/: index.html
about/databasechester/: index.html
about/foundation/: index.html
about/the-gitehr-story/: index.html
cli/: Cargo.toml  feature.md
cli/src/: config.rs  lib.rs  main.rs
cli/src/commands/: allergies.rs  completions.rs  config.rs  context.rs  contributor.rs  decrypt.rs  demographics.rs  document.rs  encrypt.rs  git.rs  gui.rs  import.rs  init.rs  journal.rs  mcp.rs  mod.rs  plugin.rs  scaffold.rs  state.rs  status.rs  typed_state.rs  upgrade.rs  upgrade_binary.rs  vaccinations.rs  verify.rs  version.rs
cli/src/commands/document/: add.rs  info.rs  list.rs  mod.rs  verify.rs
cli/src/commands/journal/: add.rs  cat.rs  commit.rs  list.rs  mod.rs  new_entry.rs  show.rs  verify.rs
cli/src/commands/mcp/: mod.rs  serve.rs
cli/src/commands/mcp/server_impl/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
cli/src/commands/remote/: add.rs  list.rs  mod.rs  remove.rs
cli/src/commands/server/: mod.rs
cli/src/commands/server/store/: add_patient.rs  init.rs  list.rs  mod.rs  remove_patient.rs
cli/src/commands/server/user/: activate.rs  add.rs  create.rs  deactivate.rs  disable.rs  enable.rs  list.rs  mod.rs
cli/src/commands/state/: get.rs  list.rs  mod.rs  set.rs
cli/src/commands/store/: add.rs  add_patient.rs  init.rs  list.rs  mod.rs  remove.rs  remove_patient.rs
cli/src/commands/transport/: create.rs  extract.rs  mod.rs
cli/src/commands/user/: activate.rs  add.rs  create.rs  deactivate.rs  disable.rs  enable.rs  list.rs  mod.rs
cli/src/utils/: mod.rs  tsid.rs
cli/tests/: completions.rs  mod.rs
cli/tests/commands/: allergies.rs  config.rs  contributor.rs  demographics.rs  document.rs  encrypt.rs  init.rs  journal.rs  mcp.rs  mod.rs  plugin.rs  remote.rs  state.rs  status.rs  store.rs  transport.rs  upgrade.rs  vaccinations.rs
cli/wix/: main.wxs
design/audit-trail/: index.html
design/design/: index.html
design/forensics/: index.html
design/longevity/: index.html
design/no-lock-in/: index.html
design/patient-centricity/: index.html
design/portability/: index.html
design/provenance/: index.html
design/redundancy/: index.html
design/security/: index.html
design/simplicity/: index.html
design/structure/: index.html
developers/developers/: index.html
developers/documentation/: index.html
docs/: .todo.md  docusaurus.config.js  getting-started.md  glossary.md  index.md  package-lock.json  package.json  sidebars.js
docs/about/: contributors.md  databasechester.md  foundation.md  sqlby.md  the-gitehr-story.md
docs/adr/: 0001-documents-as-plain-files.md
docs/cli/: allergies.md  calc.md  cli.md  clincalc.md  completions.md  config.md  decrypt.md  demographics.md  developer-workflow.md  document.md  encrypt.md  gui.md  import.md  init.md  journal.md  mcp-usage.md  plugins.md  remote.md  state.md  status.md  store.md  transport.md  upgrade.md  user.md  vaccinations.md  version.md
docs/design/: common-objections.md  design.md  files-not-databases.md  forensics.md  longevity.md  no-lock-in.md  patient-mediated-extraction.md  portability.md  redundancy.md  repository-structure.md
docs/developers/: cli.md  developers.md
docs/docs/: mcp-usage.md
docs/gitehr-folder-structure/: README.md
docs/gui/: gui.md  quick-start.md
docs/guides/: gui-walkthrough.md  repository-structure.md
docs/install/: cli.md  gui.md  install.md
docs/safety/: safety.md
docs/specification/: specification.md
docs/stylesheets/: extra.css
docs/tui/: tui.md
folder-structure/documents/: README.md
folder-structure/imaging/: README.md
folder-structure/state/: README.md  allergies.md  demographics.md  vaccinations.md
gitehr-cli/: Cargo.toml
gitehr-cli/src/: main.rs
gitehr-mcp/: Cargo.toml
gitehr-mcp/src/: lib.rs  protocol.rs  server.rs
gui/: README.md  TAURI-MCP-TEST-RESULTS.md  TAURI-MCP-TESTING.md  package-lock.json  package.json  vite.config.ts
gui/e2e/: README.md  wdio.conf.js
helper_functions/: __init__.py  get_iso_filename.py
mcp/: Cargo.toml
mcp/src/: lib.rs  protocol.rs  resources.rs  server.rs  tools.rs
s/: README.md  docs  down  generate  gui-dev  install  install-hooks  lint  minor++  patch++  regen-icons  remove-containers-and-images  size  test  up  update  version++
search/: search_index.json
spec/: DESIGN.md  agents.md  browser-extension-extractor.md  calculators.md  encryption-at-rest.md  fhir-openehr.md  fhir.md  files-vs-databases-reference-notes.md  gitehr-patient-activated-extraction-synopsis.md  gui.md  implementation.md  long-term-ideas.md  mcp.md  medical-markdown.md  nhs-app-extraction-playbook.md  nhs-app-import.md  openehr.md  problem-condition-list.md  record-provenance-and-acquisition.md  repository-verification.md  roadmap.md  spec.md
src/: config.rs  error.rs  fs_layout.rs  lib.rs  main.rs  repo.rs
test_folder/: CONSTANTS_FOR_TESTS.py  test_blockchain.py  test_hashes.py  test_helper_functions.py  test_main.py  test_record.py  test_record_writer.py  test_yamlfrontmatter.py
(+108 files in other folders)
