[workspace]
members = [
    "cli",
    "mcp",
]
exclude = [
    "gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2024"
authors = ["Marcus Baw"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
clap = { version = "4.6", features = ["derive"] }

# Async runtime for MCP server
tokio = { version = "1", features = ["full"] }

# Testing
tempfile = "3"
