[package]
name = "gitehr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A Git-based Electronic Health Record system - CLI tool"

[package.metadata.wix]
upgrade-guid = "749AB1CB-4DC7-4A17-B0AE-3E69D9C592AD"
path-guid = "18EE1A2E-4026-47A9-8608-CC6564CF7FAD"

[[bin]]
name = "gitehr"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
clap.workspace = true

# CLI-specific dependencies
clap_complete = "4.6"
fs_extra = "1"
rand = "0.10"
which = "8.0"
walkdir = "2.5"
tar = "0.4"
flate2 = "1.0"

# Internal MCP server for `gitehr mcp serve`. It is part of the gitehr binary,
# not a separately released workspace package.
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Clinical calculators are temporarily dormant here while pacharanero/calc is
# prepared for crates.io. Restore this dependency and the `gitehr calc` command
# once calc-cli is published.
# calc-cli = { version = "0.1.0", git = "https://github.com/pacharanero/calc", rev = "c45a06dc1304530073531a69756977f67b5c185b" }

[dev-dependencies]
tempfile.workspace = true
regex = "1"
serial_test = "3"

[lib]
name = "gitehr"
path = "src/lib.rs"
