[package]
name = "gitehr-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model Context Protocol server for GitEHR"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true

# Clinical calculators: each calc-core calculator is exposed as an MCP tool.
# Lives in the public pacharanero/calc repo; pinned to the same rev as cli's calc-cli
# dep so cargo unifies on one calc-core. Switch to crates.io when published.
calc-core = { git = "https://github.com/pacharanero/calc", rev = "c45a06dc1304530073531a69756977f67b5c185b" }

# MCP-specific dependencies
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[lib]
name = "gitehr_mcp"
path = "src/lib.rs"
