[package]
name = "gitehr-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model Context Protocol server for GitEHR"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true

# Clinical calculator MCP tools are temporarily dormant so GitEHR can be
# packaged by release-plz while pacharanero/calc is still pre-crates.io.
# Restore this dependency and the `calc_*` tools once calc-core is published.
# calc-core = { version = "0.1.0", git = "https://github.com/pacharanero/calc", rev = "c45a06dc1304530073531a69756977f67b5c185b" }

# MCP-specific dependencies
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[lib]
name = "gitehr_mcp"
path = "src/lib.rs"
